# internal

./: .gitignore  CMakeLists.txt  README.md  build.bat
include/: SehCompat.h
include/imgui/: imconfig.h
src/: Hook.cpp  Hook.h  Stealth.cpp  Stealth.h  main.cpp
src/UI/: Config.cpp  Config.h  GUI.cpp  GUI.h  Tabs.cpp  Tabs.h  Theme.cpp  Theme.h
src/features/: ESP.cpp  ESP.h  Offsets.h
